# unified-agentic-workspace

./: .dockerignore  .gitignore  .prettierignore  Dockerfile.e2e  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.e2e.json  wdio.conf.ts
.github/workflows/: e2e.yml  keystore.yml  release.yml  sdk-sidecar.yml
docs/: IMPLEMENTATION_ROADMAP.md  PRD.md  START_HERE.md  TECHNICAL_ARCHITECTURE.md
e2e/specs/: agent-account.e2e.ts  agent-sdk.e2e.ts  agent-terminal.e2e.ts  artifacts.e2e.ts  automation.e2e.ts  board.e2e.ts  coding.e2e.ts  dispatch.e2e.ts  providers.e2e.ts  settings.e2e.ts  smoke.e2e.ts  sources.e2e.ts  (+1 more)
scripts/: prune-sidecar-vendor.mjs  prune-sidecar-vendor.test.mjs  run-e2e.sh
src/: App.vue  main.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  util.rs
src-tauri/src/commands/: agent_sessions.rs  artifacts.rs  board.rs  coding_workspaces.rs  config.rs  dispatch.rs  mod.rs  projects.rs  provider_accounts.rs  repositories.rs  reviews.rs  sessions.rs  workspaces.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_projects_sessions.sql  0003_repository_sources.sql  0004_coding_workspaces.sql  0005_reviews.sql  0006_events.sql  0007_agent_sessions.sql  0008_artifacts.sql  0009_session_artifact_link.sql  0010_provider_accounts.sql  0011_agent_session_account.sql  0012_agent_session_kind.sql  0013_agent_session_mode.sql
src-tauri/src/models/: agent_session.rs  artifact.rs  coding_workspace.rs  event.rs  mod.rs  project.rs  provider_account.rs  repository.rs  review.rs  session.rs  workspace.rs
src-tauri/src/services/: board.rs  check.rs  completion.rs  config.rs  dispatch.rs  git.rs  login_path.rs  mod.rs  review.rs
src-tauri/src/services/agent/: mod.rs  pty.rs  sdk.rs
src-tauri/src/services/keystore/: mod.rs
(+113 files in other folders)
