[package]
name = "uaw"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "uaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
portable-pty = "0.9"
libc = "0.2"

# OS keychain backends, per platform. `keyring` v3 has no default features.
# macOS: apple-native (Keychain). Windows: windows-native (Credential Manager).
# Linux: async-secret-service + crypto-rust — the PURE-RUST zbus + pure-Rust crypto
# path (encrypted DBus session, no system libdbus/OpenSSL build deps, keeps the
# Linux build dep-free). Do NOT switch Linux to `sync-secret-service` / `crypto-openssl`
# / `openssl` / `vendored`: they link system libdbus/OpenSSL and break the dep-free build.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["async-secret-service", "crypto-rust"] }

